<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/deptLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/departments" />

    <Spinner
        android:id="@+id/selectDept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/departments" />

    <TextView
        android:id="@+id/resLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/residences" />

    <Spinner
        android:id="@+id/selectDorm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/residences" />

    <CheckBox
        android:id="@+id/enableSharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_share" />

</LinearLayout>