<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >


    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-4dip"
        android:layout_marginRight="-4dip"
        android:contentDescription="@string/home_button"
        android:src="@drawable/title_home_default" />

    <Button
        android:id="@+id/accountPicker"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-4dip"
        android:layout_marginRight="-4dip"
        android:layout_toLeftOf="@+id/settingsButton"
        android:layout_toRightOf="@+id/homeButton"
        android:text="@string/connect" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-4dip"
        android:layout_marginRight="-4dip"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/ic_menu_preferences" />

    <LinearLayout
        android:id="@+id/contentArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/settingsButton"
        android:layout_below="@+id/homeButton"
        android:orientation="vertical" >

    </LinearLayout>

</RelativeLayout>
